feat(pages/profile): amend profile page

--- a/src/app/main/general/pages/profile/profile.component.html
+++ b/src/app/main/general/pages/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="pages-profile">
-    <div fxLayout.gt-sm="row nowrap" fxLayout.lt-md="column nowrap" fxLayoutGap="20px">
+    <div fxLayout.gt-sm="row nowrap" fxLayout.lt-md="column nowrap" fxLayoutAlign="space-between start" fxLayoutGap="30px">
         <mat-card fxFlex="30" class="profile-card">
             <mat-card-content>
                 <img mat-card-avatar src="../../../../../assets/images/avatars/tianhun.jpg">
@@ -32,7 +32,7 @@
             </mat-card-actions>
         </mat-card>
 
-        <mat-card fxFlex="70" class="tabs-card">
+        <mat-card fxFlex="70" class="profile-board">
             <mat-tab-group>
                 <mat-tab label="Activities">
                     <mat-list>
@@ -46,7 +46,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 “Check if it can be corrected with overflow : hidden”
                             </div>
                         </mat-list-item>
@@ -60,7 +60,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
@@ -77,7 +77,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
                                 libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
@@ -95,7 +95,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 “Check if it can be corrected with overflow : hidden”
                             </div>
                         </mat-list-item>
@@ -109,14 +109,14 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus.
                             </div>
                         </mat-list-item>
-                        <mat-list-item class="show-more">
-                            <button mat-flat-button class="show-more-btn">Show more</button>
-                        </mat-list-item>
                     </mat-list>
+                    <div class="pt-40 pb-40">
+                        <button mat-flat-button class="show-more-btn">Show more</button>
+                    </div>
                 </mat-tab>
                 <mat-tab label="Profile">
                     <mat-list>
@@ -130,7 +130,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
                                 libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
@@ -148,7 +148,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 “Check if it can be corrected with overflow : hidden”
                             </div>
                         </mat-list-item>
@@ -164,7 +164,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 “Check if it can be corrected with overflow : hidden”
                             </div>
                         </mat-list-item>
@@ -178,7 +178,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus.
                             </div>
                         </mat-list-item>
@@ -192,7 +192,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
@@ -213,7 +213,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 “Check if it can be corrected with overflow : hidden”
                             </div>
                         </mat-list-item>
@@ -227,7 +227,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent
                                 libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum
@@ -245,7 +245,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
                                 <img src="https://i.pinimg.com/564x/6c/0b/60/6c0b60c34b9c6a7968777d7ed1cefafd.jpg" alt="">
@@ -262,7 +262,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 “Check if it can be corrected with overflow : hidden”
                             </div>
                         </mat-list-item>
@@ -276,7 +276,7 @@
                                     <span class="secondary-text font-size-12">active 14 minutes ago</span>
                                 </div>
                             </div>
-                            <div matLine class="list-item-content">
+                            <div matLine class="profile-item-content">
                                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus.
                             </div>
                         </mat-list-item>
