feat(pages/profile): amend profile page

--- a/src/app/main/general/pages/profile/profile.component.html
+++ b/src/app/main/general/pages/profile/profile.component.html
@@ -1,5 +1,6 @@
 <div class="pages-profile">
-    <div fxLayout.gt-sm="row nowrap" fxLayout.lt-md="column nowrap" fxLayoutAlign="space-between start" fxLayoutGap="30px">
+    <div fxLayout.gt-sm="row nowrap" fxLayout.lt-md="column nowrap" fxLayoutAlign.gt-sm="space-between start"
+        fxLayoutGap="30px">
         <mat-card fxFlex="30" class="profile-card">
             <mat-card-content>
                 <img mat-card-avatar src="../../../../../assets/images/avatars/tianhun.jpg">
