feat(pages/login): amend login and login v2 pages

--- a/src/app/main/general/pages/login-v2/login-v2.component.scss
+++ b/src/app/main/general/pages/login-v2/login-v2.component.scss
@@ -1,8 +1,8 @@
 @import "../login/login.component.scss";
 
 .pages-login-v2 {
-    .page-content-v2 {
-        // padding: 30px 500px 30px 30px;
+    &::before {
+        background-image: url(../../../../../assets/images/bg_login.jpg);
     }
 
     .page-brand-info {
@@ -17,13 +17,10 @@
     }
 
     .page-login-main {
-        @extend .login-box;
-
         width: 500px;
         height: 100%;
         padding: 150px 60px 180px;
         background: #fff;
         color: #424242;
-
     }
 }
