--- a/src/app/main/general/pages/login-v2/login-v2.component.html
+++ b/src/app/main/general/pages/login-v2/login-v2.component.html
@@ -1,6 +1,6 @@
-<div class="pages-login layout-full pages-login-v2">
+<div class="layout-full pages-login-v2">
     <div class="page overlay-bg text-center pt-64">
-        <div class="page-content-v2" fxFlex="row nowarp" fxLayoutAlign="space-between center">
+        <div fxFlex="row nowarp" fxLayoutAlign="space-between center">
             <div class="page-brand-info" fxHide.lt-sm>
                 <div class="brand text-left pl-60">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-48"></mat-icon>
@@ -8,32 +8,28 @@
                 <p class="s-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
-            <div class="page-login-main">
-                <div class="brand mb-20 text-left pl-100">
+            <div class="login-box page-login-main">
+                <div class="brand mb-20 text-left">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
                 </div>
-                <p class="mt-0 mb-20">Sign into your pages account</p>
+                <p class="mt-0 mb-20 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <div class="mt-20 mb-20">
                     <mat-form-field color="accent" class="w-100-p">
-                        <input matInput type="text" autocomplete formControlName="name" placeholder="Name" required>
+                        <input matInput type="email" autocomplete placeholder="Email" required>
                     </mat-form-field>
                     <mat-form-field color="accent" class="w-100-p">
-                        <input matInput type="email" autocomplete formControlName="email" placeholder="Email" required>
-                    </mat-form-field>
-                    <mat-form-field color="accent" class="w-100-p">
-                        <input matInput type="password" autocomplete formControlName="password" placeholder="Password"
-                            required>
+                        <input matInput type="password" autocomplete placeholder="Password" required>
                     </mat-form-field>
                     <div class="mb-40" fxLayoutAlign="space-between end">
-                        <mat-checkbox formControlName="remember">Remember me</mat-checkbox>
+                        <mat-checkbox>Remember me</mat-checkbox>
                         <a class="float-right">Forgot password?</a>
                     </div>
                     <button mat-flat-button class="w-100-p" color="accent">Sign in</button>
                 </div>
-                <p class="mt-0">Still no account? Please go to <a>Register</a></p>
+                <p class="mt-0 text-left">No account? <a>Sign Up</a></p>
 
                 <div class="copyright">
-                    <p>WEBSITE BY Ibenchu</p>
+                    <p>WEBSITE BY Notadd</p>
                     <p>© 2018. All RIGHT RESERVED.</p>
                     <div class="social pt-20">
                         <button mat-mini-fab>
