--- a/src/app/main/general/pages/login/login.component.html
+++ b/src/app/main/general/pages/login/login.component.html
@@ -1,23 +1,22 @@
 <div class="pages-login layout-full">
-    <div class="page overlay-bg text-center pt-64">
-        <div class="page-content login-box vertical-align-middle">
+    <div class="page overlay-bg text-center pt-100">
+        <div class="page-content login-box">
             <div class="brand mb-20 text-left pl-80">
                 <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
             </div>
             <p class="mt-0 mb-20">Sign into your pages account</p>
             <div class="mt-20 mb-20">
                 <mat-form-field color="accent" class="w-100-p">
-                    <input matInput type="text" autocomplete formControlName="name" placeholder="Name" required>
+                    <input matInput type="text" autocomplete placeholder="Name" required>
                 </mat-form-field>
                 <mat-form-field color="accent" class="w-100-p">
-                    <input matInput type="email" autocomplete formControlName="email" placeholder="Email" required>
+                    <input matInput type="email" autocomplete placeholder="Email" required>
                 </mat-form-field>
                 <mat-form-field color="accent" class="w-100-p">
-                    <input matInput type="password" autocomplete formControlName="password" placeholder="Password"
-                        required>
+                    <input matInput type="password" autocomplete placeholder="Password" required>
                 </mat-form-field>
                 <div class="mb-20" fxLayoutAlign="space-between end">
-                    <mat-checkbox formControlName="remember">Remember me</mat-checkbox>
+                    <mat-checkbox>Remember me</mat-checkbox>
                     <a class="float-right">Forgot password?</a>
                 </div>
                 <button mat-flat-button class="w-100-p" color="accent">Sign in</button>
@@ -25,7 +24,7 @@
             <p class="mt-0">Still no account? Please go to <a>Register</a></p>
 
             <div class="copyright">
-                <p>WEBSITE BY Ibenchu</p>
+                <p>WEBSITE BY Notadd</p>
                 <p>© 2018. All RIGHT RESERVED.</p>
                 <div class="social pt-10">
                     <button mat-icon-button>
