feat(pages/login-v2): amend login v2 layout

--- a/src/app/main/general/pages/login-v2/login-v2.component.html
+++ b/src/app/main/general/pages/login-v2/login-v2.component.html
@@ -1,7 +1,7 @@
 <div class="layout-full pages-login-v2">
     <div class="page overlay-bg text-center pt-64">
-        <div fxFlex="row nowarp" fxLayoutAlign="space-between center">
-            <div class="page-brand-info" fxHide.lt-sm>
+        <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutAlign.lt-md="center center">
+            <div class="page-brand-info" fxHide.lt-md>
                 <div class="brand text-left pl-60">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-48"></mat-icon>
                 </div>
