--- a/src/app/main/general/pages/login-v2/login-v2.component.html
+++ b/src/app/main/general/pages/login-v2/login-v2.component.html
@@ -14,10 +14,10 @@
                 </div>
                 <p class="mt-0 mb-20 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <div class="mt-20 mb-20">
-                    <mat-form-field color="accent" class="w-100-p">
+                    <mat-form-field required-color-red color="accent" class="w-100-p">
                         <input matInput type="email" autocomplete placeholder="Email" required>
                     </mat-form-field>
-                    <mat-form-field color="accent" class="w-100-p">
+                    <mat-form-field required-color-red color="accent" class="w-100-p">
                         <input matInput type="password" autocomplete placeholder="Password" required>
                     </mat-form-field>
                     <div class="mb-40" fxLayoutAlign="space-between end">
