--- a/src/app/main/general/pages/login/login.component.html
+++ b/src/app/main/general/pages/login/login.component.html
@@ -6,17 +6,17 @@
             </div>
             <p class="mt-0 mb-20">Sign into your pages account</p>
             <div class="mt-20 mb-20">
-                <mat-form-field color="accent" class="w-100-p">
+                <mat-form-field color-white required-color-red color="accent" class="w-100-p">
                     <input matInput type="text" autocomplete placeholder="Name" required>
                 </mat-form-field>
-                <mat-form-field color="accent" class="w-100-p">
+                <mat-form-field color-white required-color-red color="accent" class="w-100-p">
                     <input matInput type="email" autocomplete placeholder="Email" required>
                 </mat-form-field>
-                <mat-form-field color="accent" class="w-100-p">
+                <mat-form-field color-white required-color-red color="accent" class="w-100-p">
                     <input matInput type="password" autocomplete placeholder="Password" required>
                 </mat-form-field>
                 <div class="mb-20" fxLayoutAlign="space-between end">
-                    <mat-checkbox>Remember me</mat-checkbox>
+                    <mat-checkbox color-white>Remember me</mat-checkbox>
                     <a class="float-right">Forgot password?</a>
                 </div>
                 <button mat-flat-button class="w-100-p" color="accent">Sign in</button>
