--- a/src/app/main/general/pages/login-v2/login-v2.component.html
+++ b/src/app/main/general/pages/login-v2/login-v2.component.html
@@ -1,6 +1,6 @@
 <div class="layout-full pages-login-v2">
-    <div class="page overlay-bg text-center pt-64">
-        <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutAlign.lt-md="center center">
+    <div class="page overlay-bg text-center">
+        <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutAlign.lt-md="center center" class="h-100-p">
             <div class="page-brand-info" fxHide.lt-md>
                 <div class="brand text-left pl-60">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-48"></mat-icon>
