fix(main/general): fix login-v2 component style

--- a/src/app/main/general/pages/login-v2/login-v2.component.html
+++ b/src/app/main/general/pages/login-v2/login-v2.component.html
@@ -1,7 +1,7 @@
 <div class="layout-full pages-login-v2">
     <div class="page overlay-bg text-center">
-        <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutAlign.lt-md="center center" class="h-100-p">
-            <div class="page-brand-info" fxHide.lt-md>
+        <div fxLayout="row" fxLayoutAlign="space-between start" fxLayoutAlign.lt-md="center start" class="h-100-p">
+            <div class="page-brand-info mt-200 pt-100" fxHide.lt-md>
                 <div class="brand text-left pl-60">
                     <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-48"></mat-icon>
                 </div>
