--- a/src/@notadd/scss/partials/_forms.scss
+++ b/src/@notadd/scss/partials/_forms.scss
@@ -33,6 +33,12 @@ textarea {
         border-color: #fff;
         background: #fff;
     }
+
+    .mat-form-field-outline {
+        color: #fff;
+        // background: rgba(255, 255, 255, .5);
+        // border-radius: 5px;
+    }
 }
 
 [required-color-red] {
