--- a/src/app/main/general/pages/login/login.component.html
+++ b/src/app/main/general/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="pages-login layout-full">
     <div class="page overlay-bg text-center pt-100">
-        <div class="page-content login-box">
+        <div class="page-content auth-box">
             <div class="brand mb-20 text-left pl-80">
                 <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
             </div>
@@ -17,11 +17,11 @@
                 </mat-form-field>
                 <div class="mb-20" fxLayoutAlign="space-between end">
                     <mat-checkbox color-white>Remember me</mat-checkbox>
-                    <a class="float-right">Forgot password?</a>
+                    <a class="float-right" routerLink="/general/pages/forgot-password">Forgot password?</a>
                 </div>
                 <button mat-flat-button class="w-100-p" color="accent">Sign in</button>
             </div>
-            <p class="mt-0">Still no account? Please go to <a>Register</a></p>
+            <p class="mt-0">Still no account? Please go to <a routerLink="/general/pages/register">Register</a></p>
 
             <div class="copyright">
                 <p>WEBSITE BY Notadd</p>
