--- a/src/app/main/general/pages/login-v2/login-v2.component.scss
+++ b/src/app/main/general/pages/login-v2/login-v2.component.scss
@@ -19,8 +19,17 @@
     .auth-main {
         width: 500px;
         height: 100%;
-        padding: 150px 60px 180px;
         background: #fff;
         color: #424242;
+
+        .auth-main-inner {
+            padding: 0 60px;
+
+            @media only screen and (max-width: 400px) {
+                padding: 20px 30px;
+                overflow-y: auto;
+            }
+        }
+
     }
 }
