--- a/src/app/main/general/pages/register/register.component.html
+++ b/src/app/main/general/pages/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="pages-register layout-full">
-    <div class="page overlay-bg text-center pt-100">
+    <div class="page text-center" fxLayout="column nowarp" fxLayoutAlign="center center">
         <div class="page-content auth-box">
             <div class="brand mb-20 text-left pl-80">
                 <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
