--- a/src/app/main/general/pages/register-v2/register-v2.component.html
+++ b/src/app/main/general/pages/register-v2/register-v2.component.html
@@ -1,5 +1,5 @@
 <div class="layout-full pages-register-v2">
-    <div class="page overlay-bg text-center">
+    <div class="page text-center">
         <div fxLayout="row" fxLayoutAlign="space-between start" fxLayoutAlign.lt-md="center start" class="h-100-p">
             <div class="brand-info mt-200 pt-100" fxHide.lt-md>
                 <div class="brand text-left pl-60">
@@ -9,8 +9,8 @@
                     tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
             <div class="auth-box auth-main" fxLayout="column nowrap" fxLayoutAlign="center center">
-                <div>
-                    <div class="brand mb-20 text-left">
+                <div class="auth-main-inner">
+                    <div class="brand mt-20 mb-20 text-left">
                         <mat-icon fontSet="NotaddIcon" fontIcon="icon-logo" class="s-36"></mat-icon>
                     </div>
                     <p class="mt-0 mb-20 text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -29,7 +29,7 @@
                         </mat-form-field>
                         <div class="mb-40" fxLayoutAlign="start end" fxLayoutGap="15px">
                             <mat-checkbox></mat-checkbox>
-                            <b class="secondary-text">By clicking Sign Up, you agree to our <a>Terms</a>.</b>
+                            <b class="secondary-text text-left">By clicking Sign Up, you agree to our <a>Terms</a>.</b>
                         </div>
                         <button mat-flat-button class="w-100-p" color="accent">Sign Up</button>
                     </div>
