--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -5,11 +5,12 @@
         <div class="navbar-logo" fxLayout="row" fxLayoutAlign="space-between center">
 
             <div class="ml-16" fxFlex="80" *ngIf="rightNavbar || hiddenNavbar">
-                <mat-icon class="secondary-text" fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
+                <mat-icon class="logo secondary-text" fontSet="NotaddIcon" fontIcon="icon-logo" aria-hidden="true"></mat-icon>
             </div>
 
-            <ng-container *ngIf="hiddenNavbar || collapseNavbar">
+            <ng-container>
                 <button mat-icon-button
+                        *ngIf="!rightNavbar"
                         class="navbar-toggle-button"
                         (click)="toggleSidebarCollapsed()">
                     <mat-icon class="secondary-text">menu</mat-icon>
@@ -92,6 +93,15 @@
                 class="settings-toggle-button"
                 (click)="toggleSidebarOpen('themeOptionsPanel')">
             <mat-icon class="secondary-text">settings</mat-icon>
+        </button>
+
+        <div *ngIf="rightNavbar" class="toolbar-separator" fxHide fxShow.gt-xs></div>
+
+        <button mat-icon-button
+                *ngIf="rightNavbar"
+                class="navbar-toggle-button"
+                (click)="toggleSidebarCollapsed()">
+            <mat-icon class="secondary-text">menu</mat-icon>
         </button>
 
     </div>
