fix(@notadd/scss): fix scss

--- a/src/@notadd/scss/mixins/_icon-size.scss
+++ b/src/@notadd/scss/mixins/_icon-size.scss
@@ -10,3 +10,12 @@
         }
     }
 }
+
+@mixin mat-icon-size($size: 24px) {
+    font-size: $size;
+    height: $size;
+    width: $size;
+    min-width: $size;
+    min-height: $size;
+    line-height: $size;
+}
