--- a/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.html
+++ b/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.html
@@ -24,11 +24,11 @@
              [ngClass]="{'hover': isCollapsed}"
              [matMenuTriggerFor]="navMenu"
              #menuTrigger="matMenuTrigger"
-             (mouseenter)="toggleCollapse($event);(item.children.length && menuTrigger.openMenu())">
+             (mouseover)="toggleCollapse($event);(item.children.length && menuTrigger.openMenu());">
             <ng-container *ngTemplateOutlet="itemContent"></ng-container>
         </div>
 
-        <mat-menu class="nav-menu" #navMenu="matMenu" xPosition="before">
+        <mat-menu class="nav-menu" #navMenu="matMenu" yPosition="above">
             <ng-container *ngFor="let item of item.children">
                 <button *ngIf="item.children"
                         mat-menu-item
