feat(app/layout): change navbar width

--- a/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.html
+++ b/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.html
@@ -65,7 +65,7 @@
               [ngStyle]="{'background-color': item.badge.bg,'color': item.badge.fg}">
             {{item.badge.title}}
         </span>
-        <mat-icon class="collapsable-arrow">keyboard_arrow_right</mat-icon>
+        <mat-icon class="collapsed-arrow">keyboard_arrow_right</mat-icon>
     </ng-template>
 
 </ng-container>
