--- a/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.scss
+++ b/src/@notadd/components/navigation/nav-collapse/nav-collapse.component.scss
@@ -16,7 +16,7 @@
             justify-content: center;
 
             > span,
-            .collapsable-arrow {
+            .collapsed-arrow {
                 display: none;
             }
 
@@ -51,7 +51,7 @@
 
     .nav-link {
 
-        .collapsable-arrow {
+        .collapsed-arrow {
             transition: transform .3s ease-in-out, opacity .25s ease-in-out .1s;
             transform: rotate(0);
         }
@@ -65,7 +65,7 @@
 
         > .nav-link {
 
-            .collapsable-arrow {
+            .collapsed-arrow {
                 transform: rotate(90deg);
             }
         }
