--- a/src/app/main/general/pages/errors/errors.component.html
+++ b/src/app/main/general/pages/errors/errors.component.html
@@ -1,6 +1,6 @@
 <div class="pages-errors layout-full">
-    <div fxLayout="row nowarp" fxLayoutAlign="center center" class="h-100-p">
-        <div class="error-box text-center">
+    <div class="h-100-p text-center vertical-align">
+        <div class="error-box vertical-align-middle">
             <h1>{{code}}</h1>
             <p class="error-info">Page Not Found !</p>
             <p class="error-advise">YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
