--- a/src/app/main/general/pages/errors/errors.component.scss
+++ b/src/app/main/general/pages/errors/errors.component.scss
@@ -7,15 +7,29 @@
     height: 100%;
 }
 
+.vertical-align {
+    &::before {
+        display: inline-block;
+        height: 100%;
+        vertical-align: middle;
+        content: "";
+    }
+
+    .vertical-align-middle {
+        display: inline-block;
+        vertical-align: middle;
+    }
+}
+
 .copyright {
     margin-top: 60px;
-    font-size: .858rem;
+    font-size: 12px;
     font-weight: 500;
     color: #424242;
     letter-spacing: 1px;
 
     p {
-        margin: 0 0 1rem;
+        margin: 0 0 14px;
     }
 }
 
@@ -27,11 +41,12 @@
 
 .pages-errors {
     .error-box {
+        padding: 20px 10px;
         font-family: Roboto, sans-serif;
 
         h1 {
             margin: 22px 0 11px;
-            font-size: 10em;
+            font-size: 128px;
             font-weight: bold;
             color: #424242;
         }
@@ -46,7 +61,7 @@
 
         .error-advise {
             margin: 0 0 25px;
-            font-size: 1rem;
+            font-size: 14px;
             font-weight: bold;
             color: #a9afb5;
         }
