feat(pages/forgot-password): amend forgot-password page layout

--- a/src/app/main/general/pages/forgot-password/forgot-password.component.html
+++ b/src/app/main/general/pages/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <div class="pages-forgot-password layout-full">
-    <div fxLayout="row" fxLayoutAlign="center center" class="h-100-p">
-        <div class="forgot-password-box text-center">
+    <div class="h-100-p text-center vertical-align">
+        <div class="forgot-password-box vertical-align-middle">
             <h3>Forgot Your Password ?</h3>
             <p class="info mt-0 mb-20">Input your registered email to reset your password</p>
             <div class="mt-20 mb-20">
