--- a/src/app/main/general/pages/forgot-password/forgot-password.component.scss
+++ b/src/app/main/general/pages/forgot-password/forgot-password.component.scss
@@ -12,11 +12,14 @@
 .pages-forgot-password {
 
     .forgot-password-box {
+        padding: 20px 10px;
+
         h3 {
-            margin: 22px 0 11px 0;
-            font-size: 36px;
+            margin: 22px 0;
+            font-size: 31px;
             font-weight: 400;
             line-height: 1.2;
+            letter-spacing: 1px;
             color: #424242;
         }
 
