feat(pages/lockscreen): amend lockscreen page layout

--- a/src/app/main/general/pages/lockscreen/lockscreen.component.html
+++ b/src/app/main/general/pages/lockscreen/lockscreen.component.html
@@ -1,6 +1,6 @@
 <div class="pages-lockscreen layout-full">
-    <div fxLayout="row" fxLayoutAlign="center center" class="page overlay-bg h-100-p text-center">
-        <div class="page-content auth-box">
+    <div class="page h-100-p text-center vertical-align">
+        <div class="page-content auth-box vertical-align-middle">
             <div class="avatar s-50 mb-20">
                 <img src="../../../../../assets/images/avatars/tianhun.jpg">
             </div>
