--- a/src/app/main/general/pages/lockscreen/lockscreen.component.scss
+++ b/src/app/main/general/pages/lockscreen/lockscreen.component.scss
@@ -6,6 +6,13 @@
         background-image: url("../../../../../assets/images/bg_lockscreen.jpg");
     }
 
+    .page-content {
+        display: inline-block;
+        width: 400px;
+        max-width: 100%;
+        padding: 30px;
+    }
+
     .avatar {
         width: 50px;
         height: 50px;
